fixed inconsistency with nav by adding z-index, added and correctly sized font-awesome glyphs, changed search text on landing page and added dotted border-rights to how it works area

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -9,7 +9,7 @@ ul, a {
 nav {
 	top: 0;
 	position: fixed;
-
+	z-index: 1;
 	height: 5em;
 	@include span-columns(12);
 	background-color: black;
@@ -31,6 +31,15 @@ nav {
 	}
 	ul {
 		margin-bottom: 0;
+		li {
+			position: relative;
+			display: inline-block;
+			left: 40em;
+			top: -1.5em;
+		}
+		li.sign-out-button {
+			margin-left: 2em;
+		}
 	}
 }
 
@@ -40,7 +49,7 @@ nav {
  background-image: asset-url('phanto-concert1.jpg');
  @include span-columns(12);
 
- center {
+center {
  	margin-top: 4em;
 	color: white;
 	font-family: 'Lato';
@@ -49,14 +58,24 @@ nav {
     .5px -.5px 0 $light-red,
     -.5px .5px 0 $light-red,
     .5px .5px 0  $light-red;
+  h1 {
+  	font-size: 2.5em; 
+  }
+  h2 {
+  	font-size: 2em;
+  }
+  .fbs-status {
+
+  }
  }
  input#myinput.form-control{
  	@include span-columns(6);
  	@include shift(3);
- 	margin-top: 1em;
+
  	color: $dark-green;
  	font-size: 1.5em;
  	border-radius: 8px;
+ 	border: 2px outset white;
  }
  input.search-button {
  	@include span-columns(2);
@@ -71,14 +90,17 @@ nav {
 
  #howitworks {
  	margin-top: 9em;
- 	height: 30em;
+ 	height: 35em;
  	@include span-columns(12);
  	position: relative;
-
- 	border-top: 1em solid $base-red;
+ 	background-color: white;
+ 	i {
+ 		font-size: 3em; 
+ 	}
  	
  	h1 {
  		color: $base-red;
+ 		margin-bottom: 2em;
 		text-shadow:
 	    -.5px -.5px 0 black,
 	    .5px -.5px 0 black,
@@ -87,8 +109,34 @@ nav {
 	  @include span-columns(3);
 	  @include shift(4.5);
  		}
+ 	.home-left{
+ 		position: relative;
+ 		@include span-columns(3);
+ 		@include shift(1.5);
+ 		height: 20em;
+ 		border-right: 1em dotted $base-red;
+ 		}
+ 	.home-center{
+ 		position: relative;
+ 		@include span-columns(3);
+ 		@include shift(1);
+ 		height: 20em;
+ 		border-right: 1em dotted $base-red;
+ 			i {
+ 				@include shift(1);
+ 			}
+ 		}
+ 	.home-right{
+ 		position: relative;
+ 		@include span-columns(3);
+ 		height: 20em;
+ 			i {
+ 				@include shift(5);
+ 			}
+ 		}
 	}
 }
+
 #sign_in {
 	padding: 5px;
 	@include shift(8);
